--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Welcome to Radi Trading</h1>
 
-<p>Learing Importer of contruction material to the Kingdom of Morocco.</p>
+<p>Leading Importer and Distributor of Float Glass to the Kingdom of Morocco.</p>
 
 </body>
 </html>
