--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Radi Trading (RT)</title>
+</head>
 <body>
-
-<h1>Welcome to Radi Trading</h1>
-
-<p>Leading Importer and Distributor of Float Glass to the Kingdom of Morocco.</p>
-
+  <h1>Welcome to Radi Trading (RT)</h1>
+  <p>Under construction... coming soon.</p>
+  <br />
+  <img src="https://www.dropbox.com/s/gdzs3hw0jwymd77/Under-Construction.jpg?dl=0">
 </body>
 </html>
