--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <h1>Welcome to Radi Trading (RT)</h1>
   <p>Under construction... coming soon.</p>
   <br />
-  <img src="https://www.dropbox.com/s/gdzs3hw0jwymd77/Under-Construction.jpg?dl=0">
+  <img src="Under-Construction.jpg">
 </body>
 </html>
