--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Radi Trading (RT)</title>
+  <title>Radi Trading</title>
+  <link rel="icon" type="image/png" href="img/favicon/favicon-196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="favicon-96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="img/favicon/favicon-32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon/favicon-16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="img/favicon/favicon-128.png" sizes="128x128" />
 </head>
 <body>
+  <img src="img/logo.png">
   <h1>Welcome to Radi Trading (RT)</h1>
   <p>Under construction... coming soon.</p>
   <br />
-  <img src="Under-Construction.jpg">
+  <img src="img/Under-Construction.jpg">
 </body>
 </html>
