--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light" id="main-navigation">
             <div class="container">
                 <a class="navbar-brand scroll-trigger" href="#" id="header-logo">
-                    <img src="img/logo.png" class="img-fluid" width="200"
+                    <img src="img/logo.png" class="img-fluid" width="98" height="60"
                         alt="Radi Trading Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
