--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
