--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta content="Radi Trading Website" property="og:title"/>
     <meta name="description" content="Radi Trading Website" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/favicon/favicon-196.png" sizes="196x196" />
     <link rel="icon" type="image/png" href="favicon-96.png" sizes="96x96" />
     <link rel="icon" type="image/png" href="img/favicon/favicon-32.png" sizes="32x32" />
@@ -16,6 +17,12 @@
     <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <style>
+        body {
+            position: relative;
+        }
+    </style>
 </head>
 
 <body>
@@ -44,7 +51,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark scroll-trigger" href="#produits">Nos Produits</a>
+                            <a class="nav-link text-dark scroll-trigger" href="#products">Nos Produits</a>
                         </li>
 
                         <li class="nav-item">
@@ -92,8 +99,9 @@
                 </ul>
             </div>
         </section>
+        <hr>
 
-        <section id="produits" class="py-5">
+        <section id="products" class="py-5"  >
             <div class="section-content">
                 <div class="container text-center">
                     <h2>Nos produits</h2>
@@ -151,7 +159,7 @@
         </section>
         <hr>
 
-        <section id="services">
+        <section id="services" style="padding-top: 70px; padding-bottom:70px;">
             <div class="container text-left py-5">
                 <h2>Nos services</h2>
                 <ul>
@@ -163,7 +171,7 @@
             </div>
         </section>
         <hr>
-        <section id="contact">
+        <section id="contact" >
             <div class="container text-left py-5">
                 <h2>Contact</h2>
                 <div>🏠 329 Rue 6, Quartier Namae, Bensouda, Fès, Maroc</div>
